--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,10 @@ sites:
     url: https://search.anarion.pl
   - name: Speedtest
     url: https://speedtest.nas.anarion.pl
+  - name: emodul.pl
+    url: https://emodul.pl
+  - name: emodul.eu
+    url: https://emodul.eu
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -22,7 +26,7 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-      
+
   robotsText: "User-agent: * \n Disallow: /"
 
 # Upptime also supports notifications, assigning issues, and more
